# kaggle_leash_bio

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  linter.yml
docs/: conf.py  index.md
kaggle_leash_bio/: data_exploration.ipynb  featurization_model.ipynb  prediction.ipynb
tests/: conftest.py
