[tool.poetry]
name = "kaggle_leash_bio"
version = "0.0.0"
description = "TODO"
authors = [
    "kaggle_leash_bio <mma121@pitt.edu>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"
poetry-dynamic-versioning = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-html = "^4.0.1"
coverage = "^7.3.1"
colorama = "^0.4.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-multiversion = "^0.2.4"
furo = "^2023.9.10"
sphinx-design = "^0.5.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinxemoji = "^0.2.0"
sphinx-autoapi = "^2.1.1"
sphinx-autodoc-typehints = "^1.24.0"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"
myst-nb = "^1.0.0"
pydocstyle = "^6.3.0"
sphinx-togglebutton = "^0.3.2"

[tool.bumpversion]
current_version = "0.0.0"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
no_regex = false
search = "\\[Unreleased\\]"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
]

[tool.pylint.messages_control]
good-names = [
    "i",
    "j",
    "e",
    "ex",
]
ignore = [
    "CVS",
    "conf.py",
]

[tool.black]
target-version = [
    "py311",
]
line-length = 88
color = true
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n    | env\n    | venv\n)/\n"

[tool.isort]
py_version = 311
line_length = 88
known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = "3.11"
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
norecursedirs = [
    "kaggle_leash_bio",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = [
    "tests",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[coverage.paths]
source = "kaggle_leash_bio"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

["tool.poetry.group.conda.dependencies"]
annotated-types = "^0.6.0"
anyascii = "^0.3.2"
appdirs = "^1.4.4"
appnope = "^0.1.4"
astroid = "^2.15.8"
asttokens = "^2.4.1"
attrs = "^23.2.0"
Babel = "^2.15.0"
beautifulsoup4 = "^4.12.3"
black = "^23.12.1"
Brotli = "^1.0.9"
build = "^1.2.1"
bump-my-version = "^0.11.0"
CacheControl = "^0.14.0"
cachy = "^0.3.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
cfgv = "^3.4.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.2"
clikit = "^0.6.2"
colorama = "^0.4.6"
comm = "^0.2.2"
conda_lock = "^2.5.6"
conda_poetry_liaison = "^0.1.2"
coverage = "^7.5.1"
crashtest = "^0.4.1"
cryptography = "^42.0.5"
debugpy = "^1.8.1"
decorator = "^5.1.1"
dill = "^0.3.8"
distlib = "^0.3.8"
docutils = "^0.20.1"
dulwich = "^0.21.7"
dunamai = "^1.21.1"
ensureconda = "^1.4.4"
executing = "^2.0.1"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
furo = "^2023.9.10"
gitdb = "^4.0.7"
GitPython = "^3.1.37"
gmpy2 = "^2.1.2"
html5lib = "^1.1"
identify = "^2.5.36"
idna = "^3.7"
imagesize = "^1.4.1"
importlib_metadata = "^7.1.0"
iniconfig = "^2.0.0"
installer = "^0.7.0"
ipykernel = "^6.29.4"
ipython = "^8.24.0"
isort = "^5.13.2"
"jaraco.classes" = "^3.2.1"
jedi = "^0.19.1"
Jinja2 = "^3.1.4"
jsonschema = "^4.22.0"
jsonschema-specifications = "^2023.12.1"
jupyter-cache = "^1.0.0"
jupyter_client = "^8.6.1"
jupyter_core = "^5.7.2"
keyring = "^24.3.1"
lazy-object-proxy = "^1.10.0"
loguru = "^0.7.2"
markdown-it-py = "^3.0.0"
MarkupSafe = "^2.1.5"
matplotlib-inline = "^0.1.7"
mccabe = "^0.7.0"
mdit-py-plugins = "^0.4.1"
mdurl = "^0.1.2"
more-itertools = "^10.1.0"
mpmath = "^1.3.0"
msgpack = "^1.0.3"
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
myst-nb = "^1.1.0"
myst-parser = "^2.0.0"
nbclient = "^0.10.0"
nbformat = "^5.10.4"
nest-asyncio = "^1.6.0"
networkx = "^3.1"
nodeenv = "^1.8.0"
numpy = "^1.26.4"
packaging = "^24.0"
pandas = "^2.2.2"
parso = "^0.8.4"
pastel = "^0.2.1"
pathspec = "^0.12.1"
pexpect = "^4.9.0"
pillow = "^10.3.0"
pip = "^24.0"
pkginfo = "^1.10.0"
platformdirs = "^4.2.1"
pluggy = "^1.5.0"
poetry = "^1.8.3"
poetry-core = "^1.9.0"
poetry-dynamic-versioning = "^1.3.0"
poetry-plugin-export = "^1.8.0"
pre_commit = "^3.7.1"
prompt-toolkit = "^3.0.43"
psutil = "^5.9.8"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pycparser = "^2.21"
pydantic = "^2.7.1"
pydantic_core = "^2.18.2"
pydantic-settings = "^2.2.1"
pydocstyle = "^6.3.0"
Pygments = "^2.18.0"
pylev = "^1.3.0"
pylint = "^2.17.7"
pyOpenSSL = "^24.0.0"
pyproject_hooks = "^1.1.0"
PySocks = "^1.7.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-metadata = "^3.1.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
PyYAML = "^6.0.1"
pyzmq = "^26.0.3"
rapidfuzz = "^3.0.0"
referencing = "^0.35.1"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
rich = "^13.7.1"
rich-click = "^1.8.2"
rpds-py = "^0.18.1"
"ruamel.yaml" = "^0.17.21"
scipy = "^1.13.0"
setuptools = "^69.5.1"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^4.0.0"
snowballstemmer = "^2.2.0"
soupsieve = "^2.5"
Sphinx = "^7.3.7"
sphinx-autoapi = "^2.1.1"
sphinx-autodoc-typehints = "^1.25.3"
sphinx-basic-ng = "^1.0.0b2"
sphinx-copybutton = "^0.5.2"
sphinx_design = "^0.5.0"
sphinx-multiversion = "^0.2.4"
sphinx-togglebutton = "^0.3.2"
sphinxcontrib-applehelp = "^1.0.8"
sphinxcontrib-devhelp = "^1.0.6"
sphinxcontrib-htmlhelp = "^2.0.5"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-qthelp = "^1.0.7"
sphinxcontrib-serializinghtml = "^1.1.10"
sphinxemoji = "^0.2.0"
SQLAlchemy = "^2.0.30"
stack-data = "^0.6.3"
sympy = "^1.12"
tabulate = "^0.9.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.5"
toolz = "^0.12.0"
torch = "^2.3.0"
torchaudio = "^2.3.0"
torchdata = "^0.7.1"
torchvision = "^0.18.0"
tornado = "^6.4"
tqdm = "^4.66.4"
traitlets = "^5.14.3"
trove-classifiers = "^2024.4.10"
typing_extensions = "^4.11.0"
tzdata = "^2024.1"
ukkonen = "^1.0.1"
urllib3 = "^2.2.1"
virtualenv = "^20.26.2"
wcwidth = "^0.2.13"
webencodings = "^0.5.1"
wheel = "^0.43.0"
wrapt = "^1.16.0"
xattr = "^1.1.0"
zipp = "^3.18.1"
